--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,8 +4,8 @@
 
 @layer base {
   body {
-    margin: 0;
     font-family: "Manrope", sans-serif;
+    min-height: 100vh;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
   }
